[gd_scene load_steps=3 format=2]

[ext_resource path="res://games/testgame/balloon_pop.gd" type="Script" id=1]

[sub_resource type="ParticleProcessMaterial" id=1]
lifetime_randomness = 0.05
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.18
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
hue_variation = 1.0
hue_variation_random = 1.0

[node name="balloonPop" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 14.0

[node name="ColorLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_bottom = 14.0

[node name="StatusLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_left = 4.0
offset_right = 1024.0
offset_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="balloonArea" type="Control" parent="VBoxContainer"]
offset_top = 18.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GPUParticles2D" type="GPUParticles2D" parent="VBoxContainer"]
emitting = false
amount = 80
one_shot = true
explosiveness = 0.64
process_material = SubResource( 1 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
